Fixing spacing, some language

--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -774,6 +774,7 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .calisto { font-family: "Calisto MT", serif; }
 .garamond { font-family: garamond, serif; }
 .baskerville { font-family: baskerville, serif; }
+.WindsorD-Bol { font-family: 'WindsorD-Bol';src: url('../webfonts/3B2CD9_0_0.eot');src: url('../webfonts/3B2CD9_0_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/3B2CD9_0_0.woff2') format('woff2'),url('../webfonts/3B2CD9_0_0.woff') format('woff'),url('../webfonts/3B2CD9_0_0.ttf') format('truetype');}
 /*
 
    FONT STYLE
